trunk/Archive2/96/de035491c1310a/output
+ g++-4.8 -std=c++11 -O2 -Wall -D_DEBUG -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:40:14: error: ‘class Derived’ has no member named ‘VirtualFunction’
     derived->VirtualFunction();
              ^
main.cpp:45:11: error: ‘class Base’ has no member named ‘VirtualFunction’
     base->VirtualFunction();
           ^
